--- a/Baitap7.html
+++ b/Baitap7.html
@@ -6,17 +6,52 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Format text <mark> marked </mark>
-       
-    </h1>
-    <br> Please use only HTML without Css
-    <ul>
-        <li> This word is <em> emphsized </em></li>
-        <li> This word is <em> italic </em></li>
-        <li> This word is <sup> superscripted </sup></li>
-        <li> This word is <sub> subscripted </sub></li>
-        <li> This word is <ins> inserted </ins></li>
-        <li> This word is <del> deleted </del></li>
-    </ul>
+<h1> Trang web bán hàng </h1>
+<ul>
+    <li><a href="">Trang chủ</a></li>
+    <li><a href="">Sản phẩm </a></li>
+    <li><a href="">Giới thiệu</a></li>
+    <li><a href="">Liên hệ</a> </li><br>
+<h1>Thông tin sản phẩm</h1>
+ <table border="1">
+        <tr>
+            <td align="center"><strong>Tên sản phẩm</strong> </td>
+            <td align="center"><strong>Mô tả</strong></td>
+            <td align="center"><strong>Giá</strong></td>
+            <td align="center"><strong>Số lượng</strong></td>
+        </tr>
+        <tr>
+            <td>Sản phẩm 1</td>
+            <td>Mô tả sản phẩm 1</td>
+            <td>100.000đ</td>
+            <td>10</td>
+        </tr>
+        <tr>
+            <td>Sản phẩm 2</td>
+            <td>Mô tả sản phẩm 2</td>
+            <td>200.000đ</td>
+            <td>5</td>
+        </tr>
+        <tr>
+            <td>Sản phẩm 3</td>
+            <td>Mô tả sản phẩm 3</td>
+            <td>300.000đ</td>
+            <td>3</td>
+        </tr>
+    </table>
+<h1>Thông tin người dùng</h1>
+<form action="" method="post">
+    <label for="Họ và tên: "> Họ và tên:</label>
+    <input type="text" name="" id="" placeholder="Hua Khac Hieu"><br>
+    <label for="email"> Emial:</label>
+    <input type="email" name="email" id="email" placeholder="hieuhk@gmail.com"><br>
+    <label for="telephone"> Số điện thoại:</label> 
+    <input type="tel" name="phone" id="phone" pattern="[0-9]{3}-[0-9]{4}-[0-9]{3}" placeholder="123-1234-123"><br>
+    <label for="Địa chỉ:">Địa chỉ</label> 
+    <input type="text" name="" id=""><br>
+    <input type="button" value="Đặt hàng" width="40px" height="40px"><br>
+&copy; 2023 trang web bán hàng
+</form>
+</ul>
 </body>
 </html>
